--- a/README.adoc
+++ b/README.adoc
@@ -1,16 +1,23 @@
 = Compiler Version Check
 
-Native command-line app for Android. Android NDK is required for buiding.
+Native command-line app for Android. Android NDK is required for building.
 
-Outputs version of NDK, compiler and STL.
+Outputs version of NDK, compiler, STL and some related info.
 
-Build as:
+In order to build:
 
- make build
+* Set `NDK_BUILD` in `Makefile` according to where Android NDK is installed.
+* If you want, adjust settings in `jni/Application.mk`.
+* Run:
+```sh
+make build
+```
 
-Run as:
+In order to run app:
 
- make run
-
-When trying to run, exactly one Android device must be connected
-or exactly one emulator running.
+* Either connect exactly one Android device to your PC or start exactly one Android emulator.
+* Make sure that `adb` is in your `PATH`.
+* Run:
+```sh
+make run
+```
